2006-06-09  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipher.java (testPadding):
	Re-wrote to cater for padding schemes using random data.

2006-06-08  Francis Kung  <fkung@redhat.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/getPreferredSize.java:
	Additional tests for null and empty elements.

2006-06-08  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Graphics2D/clip.java: New file,
	* gnu/testlet/java/awt/Graphics2D/getClip.java: New file,
	* gnu/testlet/java/awt/Graphics2D/getClipBounds.java: New file,
	* gnu/testlet/java/awt/Graphics2D/setClipBounds.java: New file.

2006-06-08  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Graphics2D/setTransform.java: New file,
	* gnu/testlet/java/awt/Graphics2D/transform.java: New file.

2006-06-08  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JScrollPane/getActionMap.java: New file.

2006-06-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/table/JTableHeader/getAccessibleContext.java: New file,
	* gnu/testlet/javax/swing/table/JTableHeader/AccessibleJTableHeader/getAccessibleChild.java: New file,
	* gnu/testlet/javax/swing/table/JTableHeader/AccessibleJTableHeader/getAccessibleChildrenCount.java: New file,
	* gnu/testlet/javax/swing/table/JTableHeader/AccessibleJTableHeader/getAccessibleRole.java: New file,
	* gnu/testlet/javax/swing/table/JTableHeader/AccessibleJTableHeader/AccessibleJTableHeaderEntry/getAccessibleChild.java: New file,
	* gnu/testlet/javax/swing/table/JTableHeader/AccessibleJTableHeader/AccessibleJTableHeaderEntry/getAccessibleChildrenCount.java: New file,
	* gnu/testlet/javax/swing/table/JTableHeader/AccessibleJTableHeader/AccessibleJTableHeaderEntry/getAccessibleComponent.java: New file,
	* gnu/testlet/javax/swing/table/JTableHeader/AccessibleJTableHeader/AccessibleJTableHeaderEntry/getAccessibleContext.java: New file,